--- a/index.html
+++ b/index.html
@@ -26,4 +26,4 @@
     function fxpreview() {
       console.log("fxhash: TRIGGER PREVIEW")
     }
-      //---- /do not edit the following code</script><link rel="stylesheet" href="./style.css"><div id="p5_loading"></div></head><body><script defer="defer" src="./bundle.js"></script></body></html>
+      //---- /do not edit the following code</script><link rel="stylesheet" href="./style.css"><div id="p5_loading"></div></head><body><script defer="defer" src="./index.js"></script></body></html>
