--- a/index.html
+++ b/index.html
@@ -1,29 +1,25 @@
-<!doctype html><html><head><title>The Beauty of Discord</title><meta charset="utf-8"><meta name="viewport" content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width,height=device-height"/><script id="fxhash-snippet">//---- do not edit the following code (you can indent as you wish)
-    let search = new URLSearchParams(window.location.search)
-    let alphabet = "123456789abcdefghijkmnopqrstuvwxyzABCDEFGHJKLMNPQRSTUVWXYZ"
-    var fxhash = search.get('fxhash') || "oo" + Array(49).fill(0).map(_ => alphabet[(Math.random() * alphabet.length) | 0]).join('')
-    let b58dec = str => [...str].reduce((p, c) => p * alphabet.length + alphabet.indexOf(c) | 0, 0)
-    let fxhashTrunc = fxhash.slice(2)
-    let regex = new RegExp(".{" + ((fxhash.length / 4) | 0) + "}", 'g')
-    let hashes = fxhashTrunc.match(regex).map(h => b58dec(h))
-    let sfc32 = (a, b, c, d) => {
-      return () => {
-        a |= 0; b |= 0; c |= 0; d |= 0
-        var t = (a + b | 0) + d | 0
-        d = d + 1 | 0
-        a = b ^ b >>> 9
-        b = c + (c << 3) | 0
-        c = c << 21 | c >>> 11
-        c = c + t | 0
-        return (t >>> 0) / 4294967296
-      }
-    }
-    var fxrand = sfc32(...hashes);
-    // true if preview mode active, false otherwise
-    // you can append preview=1 to the URL to simulate preview active
-    var isFxpreview = search.get('preview') === "1"
-    // call this method to trigger the preview
-    function fxpreview() {
-      console.log("fxhash: TRIGGER PREVIEW")
-    }
-      //---- /do not edit the following code</script><link rel="stylesheet" href="./style.css"><div id="p5_loading"></div></head><body><script defer="defer" src="./index.js"></script></body></html>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>Oceanic Sundown</title>
+    <meta charset="utf-8">
+    <meta name="viewport"
+        content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width,height=device-height" />
+    <link rel="stylesheet" href="./style.css">
+</head>
+
+<body>
+    <script crossorigin="anonymous">
+        var albaGlobalState = { isComplete: !1, metadata: null, }; const injected = window._albaInject || {}; function coerceToStrings(obj) {
+            const coercedObj = {}; for (const [key, value] of Object.entries(obj)) { coercedObj[key] = String(value) }
+            return coercedObj
+        }
+        function sfc32(a, b, c, d) { return function () { a >>>= 0; b >>>= 0; c >>>= 0; d >>>= 0; var t = (a + b) | 0; a = b ^ (b >>> 9); b = (c + (c << 3)) | 0; c = (c << 21) | (c >>> 11); d = (d + 1) | 0; t = (t + d) | 0; c = (c + t) | 0; return (t >>> 0) / 4294967296 } }
+        window.alba = { isComplete: () => { return albaGlobalState.isComplete }, setComplete: (done) => { albaGlobalState.isComplete = Boolean(done) }, getMetadata: () => { return albaGlobalState.metadata }, setMetadata: (values) => { albaGlobalState.metadata = coerceToStrings(values) }, prng: (seed) => { const [_, seedHex] = seed.split("x"); return sfc32(parseInt(seedHex.slice(0, 8), 16), parseInt(seedHex.slice(8, 16), 16), parseInt(seedHex.slice(16, 24), 16), parseInt(seedHex.slice(24, 32), 16)) }, _testSeed: () => { const buf = new Uint32Array(8); window.crypto.getRandomValues(buf); const newSeed = Array.from(buf, (n) => n.toString(16)).join("").padEnd(64, "0"); return `0x${newSeed}` }, params: { tokenId: injected.tokenId, seed: injected.seed, res: injected.res, width: injected.res, isBackend: injected.isBackend, }, }
+    </script>
+    <script src="p5.min.js"></script>
+    <script src="index.js"></script>
+</body>
+
+</html>
